--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": false,
-    "lib": [
-      "es2021"
-    ],
+    "lib": ["es2021"],
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
@@ -25,12 +23,6 @@
     "strictPropertyInitialization": true,
     "target": "es2020"
   },
-  "include": [
-    "src/**/*",
-    "typings/**/*"
-  ],
-  "exclude": [
-    "dist",
-    "node_modules"
-  ]
+  "include": ["src/**/*", "typings/**/*"],
+  "exclude": ["dist", "node_modules"]
 }
