--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swagger-extract-definitions",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Retrieves TypeScript definitions from Swagger json files",
   "repository": {
     "type": "git",
@@ -27,6 +27,8 @@
     "watch": "tsup --watch",
     "typecheck": "tsc",
     "prettier": "prettier --check .",
+    "lint": "eslint . --ext .ts",
+    "test": "jest",
     "prepare": "husky install"
   },
   "dependencies": {
