--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "yargs": "^17.7.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
     "@types/jest": "^29.5.14",
     "@types/yargs": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
@@ -52,7 +53,8 @@
     "pretty-quick": "^4.1.1",
     "ts-jest": "^29.2.6",
     "tsup": "^8.4.0",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1"
   },
   "bin": "dist/index.js",
   "engines": {
