--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     "strictPropertyInitialization": true,
     "target": "es2020"
   },
-  "include": ["src/**/*", "typings/**/*"],
+  "include": ["src/**/*", "typings/**/*", "__tests__/**/*"],
   "exclude": ["dist", "node_modules"]
 }
