--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     "target": "es2020"
   },
   "include": ["src/**/*", "typings/**/*", "__tests__/**/*"],
-  "exclude": ["dist", "node_modules"]
+  "exclude": ["node_modules", "dist"]
 }
