--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "main": "./dist",
   "homepage": "https://github.com/daniel-alberto-dev/swagger-extract-definitions#readme",
   "scripts": {
-    "build": "tsup",
-    "watch": "tsup --watch",
+    "build": "tsc -b",
+    "watch": "tsc -b -w",
     "typecheck": "tsc",
     "prettier": "prettier --check .",
     "lint": "eslint . --ext .ts",
@@ -52,7 +52,6 @@
     "jest": "^29.7.0",
     "pretty-quick": "^4.1.1",
     "ts-jest": "^29.2.6",
-    "tsup": "^8.4.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.1"
   },
