--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,14 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": false,
-    "lib": ["es2021"],
+    "lib": ["es2022"],
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": false,
+    "outDir": "./build",
     "removeComments": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
@@ -21,8 +22,8 @@
     "strictFunctionTypes": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
-    "target": "es2020"
+    "target": "es2022"
   },
   "include": ["src/**/*", "typings/**/*", "__tests__/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["build", "node_modules"]
 }
